force-app/main/default/objects/Order/fields/Actual_Realized_Weight_Lb__c.field-meta.xml
<CustomField>
    <fullName>Actual_Realized_Weight_Lb__c</fullName>
    <formula>Settled_Weight_Lb__c *  Settled_Tests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Realized Weight (Lb)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>