force-app/main/default/objects/Order/fields/Branch_Syspro__c.field-meta.xml
<CustomField>
    <fullName>Branch_Syspro__c</fullName>
    <label>Branch (Syspro)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>