force-app/main/default/objects/Order/fields/Commercient_bCompleted__c.field-meta.xml
<CustomField>
    <fullName>Commercient_bCompleted__c</fullName>
    <description>Commercient record status</description>
    <label>Commercient Completed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>