force-app/main/default/objects/Order/fields/Commercient_Import__c.field-meta.xml
<CustomField>
    <fullName>Commercient_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercient Import</label>
    <type>Checkbox</type>
</CustomField>