force-app/main/default/objects/Order/fields/Commercient_Message__c.field-meta.xml
<CustomField>
    <fullName>Commercient_Message__c</fullName>
    <description>Commercient error message</description>
    <label>Commercient Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>