force-app/main/default/objects/Order/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp;  Opportunity.Customer__c,
Opportunity.Customer__r.Name,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>