force-app/main/default/objects/Order/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <label>Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>