force-app/main/default/objects/Order/fields/Document_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Document_Recipient__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Purchase_Order&apos; , Supplier_Name__c, 
IF( RecordType.DeveloperName = &apos;Sales_Order&apos;,  Account.Name , &apos;&apos;)
)</formula>
    <label>Document Recipient</label>
    <type>Text</type>
</CustomField>