force-app/main/default/objects/Order/fields/Hauler__c.field-meta.xml
<CustomField>
    <fullName>Hauler__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot; &amp;  Opportunity.Hauler__c,
Opportunity.Hauler__r.Name,
&quot;_self&quot;
)</formula>
    <label>Hauler</label>
    <type>Text</type>
</CustomField>