force-app/main/default/objects/Order/fields/Hauler_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Hauler_Instructions__c</fullName>
    <label>Hauler Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>