force-app/main/default/objects/Order/fields/Hauler_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hauler_Rate__c</fullName>
    <formula>Opportunity.Hauling_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hauler Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>