force-app/main/default/objects/Order/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <formula>IF( AND(RecordType.DeveloperName = &apos;Purchase_Order&apos;, NOT(ISBLANK(Opportunity.Purchase_Multiplier__c))) , Opportunity.Purchase_Multiplier__c ,
IF( AND(RecordType.DeveloperName = &apos;Sales_Order&apos;, NOT(ISBLANK(Opportunity.Sales_Multiplier__c))) ,  Opportunity.Sales_Multiplier__c ,1))</formula>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>