force-app/main/default/objects/Order/fields/Pricing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Terms__c</fullName>
    <label>Pricing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PWA FOB</fullName>
            </value>
            <value>
                <fullName>PWA DEL</fullName>
            </value>
            <value>
                <fullName>DOS FOB</fullName>
            </value>
            <value>
                <fullName>DOS DEL</fullName>
            </value>
            <value>
                <fullName>PWA DOD</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>