force-app/main/default/objects/Order/fields/Settled__c.field-meta.xml
<CustomField>
    <fullName>Settled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settled</label>
    <type>Checkbox</type>
</CustomField>