force-app/main/default/objects/Order/fields/Settled_Tests__c.field-meta.xml
<CustomField>
    <fullName>Settled_Tests__c</fullName>
    <label>Settled Tests %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>