force-app/main/default/objects/Order/fields/Settled_Weight_Lb__c.field-meta.xml
<CustomField>
    <fullName>Settled_Weight_Lb__c</fullName>
    <label>Settled Weight (Lb)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>