force-app/main/default/objects/Order/fields/Ship_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Time__c</fullName>
    <label>Ship Date/Time</label>
    <type>DateTime</type>
</CustomField>