force-app/main/default/objects/Order/fields/Spot_Contract__c.field-meta.xml
<CustomField>
    <fullName>Spot_Contract__c</fullName>
    <label>Spot/Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>