force-app/main/default/objects/Order/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp;  Opportunity.Supplier__c , 
   Opportunity.Supplier__r.Name,
  &quot;_self&quot;
)</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>