force-app/main/default/objects/Order/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(Opportunity.Supplier__r.ParentId)),  Opportunity.Supplier__r.Parent.Name ,  Opportunity.Supplier__r.Name  )</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>