force-app/main/default/objects/Order/fields/Supplier_Release__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Release__c</fullName>
    <label>Supplier Release #</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>