force-app/main/default/objects/Order/fields/Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount__c</fullName>
    <formula>IF(NOT(ISBLANK(Multiplier__c)), TotalAmount *  Multiplier__c , TotalAmount)</formula>
    <label>Total Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>